css/style.css
@import url('https://fonts.googleapis.com/css?family=Raleway|Staatliches&display=swap');

:root {
    --font-header: 'Staatliches', cursive;
    --font-paragraph: 'Raleway', sans-serif;
    --background-nav: rgba(57, 61, 63, 0.43);
    --background-title: rgba(255, 255, 255, 0.41);
    --background-header: rgba(255, 119, 119, 0.46);
    --background-contact: #37505C;
    --color-nav: #DEE5E5;
    --color-title: rgba(0, 0, 0, 0.5);
    --color-header: rgba(0, 0, 0, 0.8);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: content-box;
    font-family: var(--font-paragraph);
}

.header--lvl1 {
    font-size: 7vh;
    margin-top: 10px;
    margin-left: 25px;
}

.header--lvl2 {
    font-size: 6.5vh;
    margin-top: 70px;
    margin-left: 80px;
}

.header--lvl3 {
    
    color: var(--color-header);
    font-size: 64px;
    position: relative;
    text-align: center;
    margin-top: 60px;
    margin-bottom: 100px;
}

.header--lvl3::before {
    content: '';
    height: 65px;
    width: 210px;
    background-color: var(--background-header);
    position: absolute;
    top: 35px;
    left: 50%; 
}

[class*='header--'] {
    font-family: var(--font-header);
}
.p-header {
    position: relative;
    background-image: url('../assets/images/bg-xlarge.jpg');
    background-size: cover;
    background-position: initial;
    height: 100vh;
    
}

.p-header__nav {
    position: fixed;
    width: 100%;
    z-index: 9999;
    height: 100px;
    background-color: var(--background-nav);
    font-size: 48px;
    line-height: 60px;
    padding-top: 1px;
    margin-top: -1px;
}

.p-header__menu {
    list-style-type: none;
    text-align: right;
    margin-right: 20px;
    margin-top: 20px;
    
}

.p-header__item {
    display: inline-block;
    margin-left: 20px;
    font-family: var(--font-header);
}

.p-header__item a {
    text-decoration: none;
    color: var(--color-nav);
    font-family: var(--font-header);
}
.p-header__title {
    width: 55vw;
    height: 30vh;
    position: absolute;
    top: 60%;
    left: 15%;
    background-color: var(--background-title);
    color: var(--color-title);
    padding: 20px;
}

.about {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 50px;
    padding: 50px;

}

.about__about-me {
    grid-column-start: 1;
    grid-column-end: 2; 
}


.about__about-me img {
    display: block;
    width: 250px;
    height: 250px;
    margin: 0 auto;
    clip-path: polygon(40% 0, 100% 0, 100% 60%, 60% 100%, 0 100%, 0 40%);
    object-fit: cover;
}

.about__skills {
    grid-column-start: 2;
    grid-column-end: end;
}

.about__paragraph {
    margin-top: 50px;
    font-family: var(--font-paragraph);
    font-size: 16px;
    text-align: justify;
}

.about__paragraph span {
    margin-bottom: 10px;
    display: block;
}


.about__icons {
    display: flex;
    justify-content: space-between;
}
.about__icons svg {
    width: 100px;
    height: auto;
}

.projects {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-column-gap: 50px;
    padding: 50px;
}


.projects__item {
    background: #FFFDFD;
    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 10px;
    position: relative;
    margin-bottom: 25px;
    padding: 40px;
    width: 75%;
    min-height: 200px;
    justify-self: end;
}

.projects__item:nth-child(even) {
    grid-column-start: 1;
    grid-column-end: 3;
}

.projects__item:nth-child(odd) {
    grid-column-start: 3;
    grid-column-end: end;
}

.projects__img {
    height: 150px;
    width: auto;
    float: left;
    margin-left: -30%;
}

.projects__desc {
    margin-top: 40px;
    margin-bottom: 20px;
    margin-left: 30%;
    text-align: justify;
}

.projects__links {
    display: flex;
    justify-content: space-evenly;
    position: absolute;
    width: 100%;
    left: 0;
    bottom: 25px;
}
.projects__git-link {
    background: url('../assets/icons-exp/github-logo.svg');
}

.projects__live-link {
    background: url('../assets/icons-exp/earth-grid-symbol.svg');
}

.projects__git-link,
.projects__live-link {
    display: inline-block;
    text-indent: -99999px;
    width: 25px;
    height: 25px;
    background-size: 25px 25px;
}

.contact {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 50px;
    background-color: var(--background-contact);
    padding: 50px;
}

.projects .header--lvl3,
.contact .header--lvl3 {
    grid-column-start: 1;
    grid-column-end: end;
}

.contact .header--lvl3 {
    color: var(--color-nav);
}
.contact__social {
    grid-column-start: 1;
    grid-column-end: 2;
    display: flex;
    flex-direction: column;
    color: var(--color-nav);
}

.contact__title {
    font-size: 34px;
    text-align: center;
    margin-top: 150px;
    margin-bottom: 50px;
}
.contact__socialmedia {
    display: flex;
    justify-content: space-evenly;
}
.contact__socialmedia svg {
    fill: var(--color-nav);
    width: 50px;
    height: 50px;
}
.contact__contact-form {
    grid-column-start: 2;
    grid-column-end: end;
}


.contact__input,
.contact__textarea {
    box-sizing: border-box;
    display: block;
    width: 70%;
    margin: 0 auto;
    margin-bottom: 20px;
    font-size: 20px;
    background-color: var(--color-nav);
    padding: 15px;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
    border: none;
}

.contact__textarea {
    resize: none;
    height: 300px;
    overflow-y: auto;
}

.contact__button {
    box-sizing: border-box;
    font-size: 22px;
    padding: 15px;
    width: 70%;
    border: none;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
    cursor: pointer;
    background-color: var(--background-header);
    margin-left: 15%;
}

.contact__button:disabled {
    background-color: var(--background-title);
}

.contact__button:hover {
    box-shadow: inset 0px 0px 51px -15px var(--color-title);
}
.honeypot-field {
    display: none;
}

@media (max-width: 1024px) and (orientation: landscape) {


    .header--lvl3 {
        font-size: 44px;
    }
    
    .header--lvl3::before {
        height: 45px;
        width: 180px;
        top: 25px;
        left: 50%; 
    }

    .p-header {
        background-image: url('../assets/images/bg-large.jpg');
    }
    
    .p-header__nav {
        height: 70px;
        font-size: 40px;
        line-height: 30px;
    }

    .about {
        grid-column-gap: 30px;
    
    }
    
    .about__about-me img {
        width: 200px;
        height: 200px;
    }
    
    .about__paragraph {
        margin-top: 40px;
        font-size: 14px;
    }
    
    .about__paragraph span {
        margin-bottom: 5px;
    }
    
    .about__icons {
        flex-wrap: wrap;
    }
    .about__icons svg {
        width: 70px;
    }
}

@media (max-width: 1024px) and (orientation: portrait) {

    .p-header__nav {
        height: 70px;
        font-size: 40px;
        line-height: 30px;
        width: 100vw;
    }

    .p-header__title {
        width: 85vw;
        top: 60%;
        left: 5%;
        padding: 10px;
    }

    .about {
        grid-template-columns: 1fr;
        grid-column-gap: 0px;
        padding: 10px;
    }

    .about__about-me {
        grid-column-start: 1;
        grid-column-end: end; 
    }
    .about__skills {
        grid-column-start: 1;
        grid-column-end: end;
    }

    .projects {
        grid-template-columns: 1fr;
        padding: 20px;
    }

    .projects__item:nth-child(even),
    .projects__item:nth-child(odd) {
        grid-column-start: 1;
        grid-column-end: end;
    }

    .contact {
        grid-template-columns: 1fr;
        grid-column-gap: 10px;
        padding: 20px;
    }
    
    .projects .header--lvl3,
    .contact .header--lvl3 {
        grid-column-start: 1;
        grid-column-end: end;
        grid-row: 1;
    }
    
    .contact__social {
        grid-column-start: 1;
        grid-column-end: end;
        grid-row: 3;
    }
    
    .contact__title {
        margin-top: 40px;
    }
   
    .contact__contact-form {
        grid-column-start: 1;
        grid-column-end: end;
        grid-row: 2;
    }

}
@media (max-width: 640px) and (orientation: landscape) {
    
    .header--lvl3 {
        font-size: 44px;
    }
    
    .header--lvl3::before {
        height: 45px;
        width: 180px;
        top: 25px;
        left: 50%; 
    }

    .p-header {
        background-image: url('../assets/images/bg-medium.jpg');
    }
    
    .p-header__nav {
        height: 70px;
        font-size: 40px;
        line-height: 30px;
    }
}

@media (max-width: 320px) {
    .header--lvl3 {
        font-size: 44px;
    }
    
    .header--lvl3::before {
        height: 45px;
        width: 180px;
        top: 25px;
        left: 50%; 
    }

    .p-header {
        background-image: url('../assets/images/bg-small.jpg');
    }
    
    .p-header__nav {
        height: 70px;
        font-size: 40px;
        line-height: 30px;
    }
}

